<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_title" />
    <Button
        android:id="@+id/jumpToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jump_to_main" />
    <Button
        android:id="@+id/jumpToFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jump_to_first" />
    <Button
        android:id="@+id/jumpToSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jump_to_second" />
    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_str" />
</LinearLayout>
